<resources>
    <string name="app_name">Easy Finder</string>
    <string name="Vehicle">Vehicle</string>
    <string name="Rent">Rent a Car</string>
    <string name="rent">Rent a Car</string>
    <string name="car">Car</string>
    <string name="car1">Car1</string>
    <string name="car2">Car2</string>
    <string name="motorbike">Motor cycle</string>
    <string name="car3">Car3</string>
    <string name="car4">Car4</string>
    <string name="van">Van</string>
    <string name="budget">Budget Car</string>
    <string name="cars">Available Cars</string>
    <string name="premio">Toyota Premio</string>
    <string name="select1">Select</string>
    <string name="Honda">Honda Civic</string>
    <string name="Toyota">Toyota Premio</string>
    <string name="add">Add Your Vehicle</string>
    <string name="Tp">Toyota Premio</string>
    <string name="conN">Contact Number :</string>
    <string name="conn">0779078654</string>
    <string name="own">Owner Name :</string>
    <string name="ownn">Chalaka Jayasinghe</string>
    <string name="phn">077 9066933</string>
    <string name="ow">Chalaka Jayasinghe</string>
    <string name="chrge">Charge per 1 KM :</string>
    <string name="charge">50.00</string>
    <string name="cus">Customer Ratings :</string>
    <string name="c">con</string>
    <string name="in">inm</string>
    <string name="button8">Add Your Vehicle</string>
    <string name="addv">Add Your Vehicle</string>
    <string name="came">Customer Name :</string>
    <string name="tele">Contact Number :</string>
    <string name="veht">Vehicle Type :</string>
    <string name="vehmode">Vehicle Model :</string>
    <string name="up">Upload Pictures :</string>
    <string name="view">View Your Vehicle</string>
    <string name="r1">Car</string>
    <string name="r2">Van</string>
    <string name="r3">Budget Car</string>
    <string name="r4">Motor Cycle</string>
    <string name="chg">Charge  per 1 KM :</string>
    <string name="Editt">"Edit "</string>
    <string name="del">Delete</string>
    <string name="ed">EDIT</string>
    <string name="dele">DELETE</string>
    <string name="vehname">xxxx xxxx</string>
    <string name="pon">0xx xxxxxxx</string>
    <string name="oname">xxxx xxxxxxx</string>
    <string name="price">xx.xx</string>
    <string name="xdgf">zdf</string>
    <string name="edv">Edit Your Information</string>
    <string name="update">UPDATE</string>
    <string name="cu">Customer Name</string>
    <string name="name">Enter Customer Name</string>
    <string name="cn">xxxx xxxxxx</string>
    <string name="vn">xxxx xxxxx</string>
    <string name="main">Main Page</string>
    <string name="bu">Back to Main Page</string>
    <string name="cc">Enter the name</string>
    <string name="eg">Eg : Honda Civic</string>
    <string name="numb">0xx - xxxxxxx</string>
    <string name="pri">xx.xx</string>
</resources>
